--- a/main.tex
+++ b/main.tex
@@ -353,7 +353,7 @@
 % \thispagestyle{fancy}
 % \tableofcontents
 %%%%%%%%%%%%%include file here%%%%%%%%%%%%%%%
-\iffalse
+%\iffalse
 \include{group/week1}
 \include{group/week2}
 \include{group/week3}
@@ -382,7 +382,7 @@
 \include{commutative/week11}
 \include{commutative/week12}
 \include{commutative/week13}
-\fi
+%\fi
 \include{homology/week14}
 \printindex
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
