--- a/main.tex
+++ b/main.tex
@@ -221,6 +221,7 @@
 \DeclareMathOperator{\sgn}{sgn}
 \DeclareMathOperator{\lcm}{lcm}
 \DeclareMathOperator{\Image}{Im}
+\DeclareMathOperator{\Coker}{Coker}
 \DeclareMathOperator{\Char}{char}
 \DeclareMathOperator{\Fix}{Fix}
 \DeclareMathOperator{\Inn}{Inn}
@@ -286,7 +287,7 @@
 \mathopen{}}
 \DeclarePairedDelimiterX\Set[1]\{\}{%
   \renewcommand\given{\SetSymbol[\delimsize]}
-  \,#1\,
+  \mkern1mu#1\mkern1mu
 }
 
 \DeclarePairedDelimiterX\Gen[1]{\langle}{\rangle}{%
