Fix Coker coker

--- a/homology/week14.tex
+++ b/homology/week14.tex
@@ -306,7 +306,7 @@ N is injective and $0 \to M \to N$?
     $
     \begin{tikzcd}
     0 \ar[r] & M \ar[r, "i", yshift=0.7ex] &  N \ar[r] \ar[l, "\exists \mu", 
-      yshift=-0.7ex] & \Coker i \ar[r]& 0
+      yshift=-0.7ex] & \coker i \ar[r]& 0
     \end{tikzcd}
     $
     split exact and $\mu \circ i = \Id_M$. Since $N$ injective,
