--- a/main.tex
+++ b/main.tex
@@ -221,7 +221,7 @@
 \DeclareMathOperator{\sgn}{sgn}
 \DeclareMathOperator{\lcm}{lcm}
 \DeclareMathOperator{\Image}{Im}
-\DeclareMathOperator{\Coker}{Coker}
+\DeclareMathOperator{\coker}{coker}
 \DeclareMathOperator{\Char}{char}
 \DeclareMathOperator{\Fix}{Fix}
 \DeclareMathOperator{\Inn}{Inn}
@@ -258,9 +258,8 @@
 % homology
 \newcommand\proj{\mathrm{proj}}
 \newcommand\inj{\mathrm{inj}}
-\newcommand\im{\mathrm{im}\,}
+\DeclareMathOperator{\im}{im}
 \newcommand\id{\mathbf{1}}
-\newcommand\coker{\mathrm{coker}\,}
 
 %
 \newcommand{\Resf}[1]{\big|_{#1}}
